more z-index fixes

--- a/css/ship.css
+++ b/css/ship.css
@@ -8,7 +8,7 @@ ship {
   height: 100%;
   width: 100%;
   top: -100%;
-  z-index: 99;
+  z-index: 9;
 }
 
 ship.expanded {
@@ -62,11 +62,12 @@ ship item-slot {
   top: 0px;
 }
 
-ending {
+ending, intro {
   position: fixed;
   width: 100%;
   height: 100%;
   z-index: 1000;
+  opacity: 1;
 }
 
 ending message {
@@ -79,7 +80,7 @@ ending message {
   left: 0px;
 }
 
-ending block {
+ending block, intro block {
   height: 100%;
   width: 100%;
   background-color: #232330;
@@ -87,7 +88,10 @@ ending block {
   margin-right: auto;
 }
 
-ending img {
+ending img, intro img {
   height: 100%;
 }
 
+intro.hide {
+  opacity: 0;
+}
